--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
     "webpack-cli": "^4.9.0"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0"
   }
 }
